fixed broken css selectors

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -275,7 +275,7 @@ input:-webkit-autofill {
   width: 100%;
   background-image: @brown;
   padding-top: 3%;
-  padding-bottom: 13%;
+  padding-bottom: 15%;
   margin-top: 10%;
 
   .clear-form-link {
@@ -316,13 +316,13 @@ input:-webkit-autofill {
 
 // Money Sent Confirmation Page
 .success-wrapper {
-  margin-top: 15%;
-  margin-bottom: 20%;
+  padding: 35% 0;
 }
 .confirmation {
-  text-align: @align-center;
   font-size: @font-size-2;
   font-weight: @font-weight-400;
+  text-align: @align-center;
+  padding-top: 10%;
 }
 
 .fa-check {
